--- a/sources/Wotstat/Web.config
+++ b/sources/Wotstat/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <clear />
-    <add name="Main" connectionString="Server=WORK-PC;Database=Wotstat;User Id=Wotstat;Password=Wotstat" />
+    <add name="Main" connectionString="Server=localhost;Database=Wotstat;User Id=Wotstat;Password=Wotstat" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
