--- a/sources/Calc/Calc.csproj
+++ b/sources/Calc/Calc.csproj
@@ -35,53 +35,53 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ByndyuSoft.Infrastructure.Common">
-      <HintPath>..\packages\Infrastructure.Common.1.0.13.0\lib\net40\ByndyuSoft.Infrastructure.Common.dll</HintPath>
+      <HintPath>..\..\packages\Infrastructure.Common.1.0.13.0\lib\net40\ByndyuSoft.Infrastructure.Common.dll</HintPath>
     </Reference>
     <Reference Include="ByndyuSoft.Infrastructure.Domain">
-      <HintPath>..\packages\Infrastructure.Domain.1.0.13.0\lib\net40\ByndyuSoft.Infrastructure.Domain.dll</HintPath>
+      <HintPath>..\..\packages\Infrastructure.Domain.1.0.13.0\lib\net40\ByndyuSoft.Infrastructure.Domain.dll</HintPath>
     </Reference>
     <Reference Include="ByndyuSoft.Infrastructure.NHibernate">
-      <HintPath>..\packages\Infrastructure.NHibernate.1.0.13.0\lib\net40\ByndyuSoft.Infrastructure.NHibernate.dll</HintPath>
+      <HintPath>..\..\packages\Infrastructure.NHibernate.1.0.13.0\lib\net40\ByndyuSoft.Infrastructure.NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="ByndyuSoft.Infrastructure.NHibernate.Conventions">
-      <HintPath>..\packages\Infrastructure.NHibernate.Conventions.1.0.13.0\lib\net40\ByndyuSoft.Infrastructure.NHibernate.Conventions.dll</HintPath>
+      <HintPath>..\..\packages\Infrastructure.NHibernate.Conventions.1.0.13.0\lib\net40\ByndyuSoft.Infrastructure.NHibernate.Conventions.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
+      <HintPath>..\..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Facilities.FactorySupport, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Castle.FactorySupportFacility.3.2.0\lib\net45\Castle.Facilities.FactorySupport.dll</HintPath>
+      <HintPath>..\..\packages\Castle.FactorySupportFacility.3.2.0\lib\net45\Castle.Facilities.FactorySupport.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Windsor, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Castle.Windsor.3.2.0\lib\net45\Castle.Windsor.dll</HintPath>
+      <HintPath>..\..\packages\Castle.Windsor.3.2.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="EasyNetQ">
-      <HintPath>..\packages\EasyNetQ.0.26.3.203\lib\net40\EasyNetQ.dll</HintPath>
+      <HintPath>..\..\packages\EasyNetQ.0.26.3.203\lib\net40\EasyNetQ.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate">
-      <HintPath>..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
+      <HintPath>..\..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
     </Reference>
     <Reference Include="Iesi.Collections">
-      <HintPath>..\packages\Iesi.Collections.3.3.3.4001\lib\Net35\Iesi.Collections.dll</HintPath>
+      <HintPath>..\..\packages\Iesi.Collections.3.3.3.4001\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Annotations">
-      <HintPath>..\packages\JetBrains.Annotations.7.0\lib\net45\JetBrains.Annotations.dll</HintPath>
+      <HintPath>..\..\packages\JetBrains.Annotations.7.0\lib\net45\JetBrains.Annotations.dll</HintPath>
     </Reference>
     <Reference Include="NArms.Windsor, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NArms.Windsor.1.3.0\lib\net40\NArms.Windsor.dll</HintPath>
+      <HintPath>..\..\packages\NArms.Windsor.1.3.0\lib\net40\NArms.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate">
-      <HintPath>..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
+      <HintPath>..\..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="RabbitMQ.Client">
-      <HintPath>..\packages\RabbitMQ.Client.3.1.5\lib\net30\RabbitMQ.Client.dll</HintPath>
+      <HintPath>..\..\packages\RabbitMQ.Client.3.1.5\lib\net30\RabbitMQ.Client.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
@@ -117,15 +117,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\sources\Domain.DataAccess\Domain.DataAccess.csproj">
+    <ProjectReference Include="..\Domain.DataAccess\Domain.DataAccess.csproj">
       <Project>{5d0e4e65-909a-4900-b5e1-25da7e1576b8}</Project>
       <Name>Domain.DataAccess</Name>
     </ProjectReference>
-    <ProjectReference Include="..\sources\Domain.Model\Domain.Model.csproj">
+    <ProjectReference Include="..\Domain.Model\Domain.Model.csproj">
       <Project>{950addb6-bffd-4c8d-bc16-2110f45a08f5}</Project>
       <Name>Domain.Model</Name>
     </ProjectReference>
-    <ProjectReference Include="..\sources\Messages\Messages.csproj">
+    <ProjectReference Include="..\Messages\Messages.csproj">
       <Project>{1433e803-6e92-4240-89dd-c35b2be96377}</Project>
       <Name>Messages</Name>
     </ProjectReference>
