--- a/sources/Tasker/Tasker.csproj
+++ b/sources/Tasker/Tasker.csproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="deployTasker.bat" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
