--- a/sources/Calc/App.config
+++ b/sources/Calc/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings>
+    <clear />
+    <add name="Main" connectionString="Server=localhost;Database=Wotstat;User Id=Wotstat;Password=Wotstat" />
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
