--- a/sources/Tasker/TaskScheduler.csproj
+++ b/sources/Tasker/TaskScheduler.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{918B940B-F72E-493C-9433-87919A38C620}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tasker</RootNamespace>
-    <AssemblyName>Tasker</AssemblyName>
+    <RootNamespace>TaskScheduler</RootNamespace>
+    <AssemblyName>TaskScheduler</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
@@ -55,9 +55,6 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\..\packages\Castle.Windsor.3.2.1\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
-    <Reference Include="EasyNetQ">
-      <HintPath>..\..\packages\EasyNetQ.0.26.3.203\lib\net40\EasyNetQ.dll</HintPath>
-    </Reference>
     <Reference Include="FluentNHibernate">
       <HintPath>..\..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
     </Reference>
@@ -73,15 +70,8 @@
     <Reference Include="NCron">
       <HintPath>..\..\packages\NCron.2.2\lib\net40-Client\NCron.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="RabbitMQ.Client">
-      <HintPath>..\..\packages\RabbitMQ.Client.3.1.5\lib\net30\RabbitMQ.Client.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -94,9 +84,9 @@
   <ItemGroup>
     <Compile Include="CreateTaskJob.cs" />
     <Compile Include="Installers\DataAccessInstaller.cs" />
+    <Compile Include="Installers\ServicesInstaller.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaskCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
