--- a/sources/TaskerConsole/TaskerConsole.csproj
+++ b/sources/TaskerConsole/TaskerConsole.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Installers\DataAccessInstaller.cs" />
+    <Compile Include="Installers\ServicesInstaller.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -104,10 +105,6 @@
     <ProjectReference Include="..\Domain.Model\Domain.Model.csproj">
       <Project>{950addb6-bffd-4c8d-bc16-2110f45a08f5}</Project>
       <Name>Domain.Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Tasker\Tasker.csproj">
-      <Project>{918b940b-f72e-493c-9433-87919a38c620}</Project>
-      <Name>Tasker</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
