--- a/sources/Wotstat.Application/Wotstat.Application.csproj
+++ b/sources/Wotstat.Application/Wotstat.Application.csproj
@@ -105,6 +105,7 @@
       <HintPath>..\..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />
@@ -146,8 +147,11 @@
     <Compile Include="Accounts\AccountController.cs" />
     <Compile Include="Accounts\Profiles\AccountProfile.cs" />
     <Compile Include="Accounts\ViewModels\UserResponseModel.cs" />
+    <Compile Include="Boilerplate\Extensions\Web\Class1.cs" />
+    <Compile Include="Boilerplate\Extensions\Web\HtmlHelperConfigExtensions.cs" />
     <Compile Include="Boilerplate\Extensions\Web\HtmlHelperAuthExtensions.cs" />
     <Compile Include="Boilerplate\Extensions\Web\HtmlHelperStatisticExtensions.cs" />
+    <Compile Include="Boilerplate\Filters\ConfigAttribute.cs" />
     <Compile Include="Boilerplate\Filters\ContextAccountAttribute.cs" />
     <Compile Include="Enviroment\Impl\Config.cs" />
     <Compile Include="Enviroment\IConfig.cs" />
