--- a/sources/Wotstat/Web.config
+++ b/sources/Wotstat/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ApplicationId" value="171745d21f7f98fd8878771da1000a31"/>
+    <add key="OAuthUrl" value="https://api.worldoftanks.ru/wot/auth/login/"/>
   </appSettings>
   <system.web>
      <authentication mode="Forms">
